--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@
                 </p>
             </div> 
             
-        <div class="photo">
-            <img src="hootgif.gif" alt="gif of hoot covers"/> 
+        <div id="photo">
+            <img style="width: 400px;" src="hootgif.gif" alt="gif of hoot covers"/> 
         </div>
 
     </div>
 
 
 
-    <div class=footer>
-            <h2>hoot</h2>
-            <p>hoot@barnard.edu</p>
+    <div id="footer">
+        <h2>hoot</h2>
+        <p>hoot@barnard.edu</p>
     </div>
 
 
